--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </main>
     <footer id="site-footer">
       <p id="footer-text">
-        Designed and maintained by MnC'24 batch
+        Designed and maintained by Achyuth Jayadevan
       </p>
     </footer>
     <script src="/app.js" type="module"></script>
