feat: Introduce passive asset loading with preview status updates, replacing explicit PDF prefetching.

--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Class Resources</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preload" href="/resources-manifest.json" as="fetch" crossorigin="anonymous" />
-    <link rel="preload" href="/assets/mnc-logo.png" as="image" />
-    <link rel="stylesheet" href="/src/styles.css" />
-  </head>
-  <body data-loading="true">
-    <header id="site-header">
-      <div id="logo-area">
-        <img
-          id="site-logo"
-          src="/assets/mnc-logo.png"
-          alt="Class logo"
-          width="40"
-          height="40"
-          decoding="async"
-        />
-      </div>
-    </header>
-    <main id="app" aria-label="Class resources">
-      <section id="content-panel">
-        <h1 id="content-title">Contents</h1>
-          <div id="content-layout">
-            <div id="tree-pane">
-              <div id="tree-container" role="tree" aria-label="Contents tree"></div>
-              <p id="resize-note" hidden>
-                Resize the window wider to see the preview pane on the right.
-              </p>
-            </div>
-            <div id="preview-pane" aria-label="Preview" role="region">
-              <div id="preview-placeholder">
-                Hover over an item on the left to preview it.
-              </div>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Class Resources</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preload" href="/resources-manifest.json" as="fetch" crossorigin="anonymous" />
+  <link rel="preload" href="/assets/mnc-logo.png" as="image" />
+  <link rel="stylesheet" href="/src/styles.css" />
+</head>
+
+<body data-loading="true">
+  <header id="site-header">
+    <div id="logo-area">
+      <img id="site-logo" src="/assets/mnc-logo.png" alt="Class logo" width="40" height="40" decoding="async" />
+    </div>
+  </header>
+  <main id="app" aria-label="Class resources">
+    <section id="content-panel">
+      <h1 id="content-title">Contents</h1>
+      <div id="content-layout">
+        <div id="tree-pane">
+          <div id="tree-container" role="tree" aria-label="Contents tree"></div>
+          <p id="resize-note" hidden>
+            Resize the window wider to see the preview pane on the right.
+          </p>
         </div>
-      </section>
-    </main>
-    <footer id="site-footer">
-      <p id="footer-text">
-        Designed and maintained by Achyuth Jayadevan
-      </p>
-    </footer>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+        <div id="preview-pane" aria-label="Preview" role="region">
+          <div id="preview-placeholder">
+            Hover over an item on the left to preview it.
+          </div>
+          <div id="preview-status" class="preview-status"></div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer id="site-footer">
+    <p id="footer-text">
+      Designed and maintained by Achyuth Jayadevan
+    </p>
+  </footer>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
