feat: architectural changes, cors, fix copying

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <title>Class Resources</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preload" href="/resources-manifest.json" as="fetch" crossorigin="anonymous" />
-  <link rel="preload" href="/assets/mnc-logo.png" as="image" />
   <link rel="stylesheet" href="/src/styles.css" />
 </head>
 
 <body data-loading="true">
   <header id="site-header">
     <div id="logo-area">
-      <img id="site-logo" src="/assets/mnc-logo.png" alt="Class logo" width="40" height="40" decoding="async" />
+      <img id="site-logo" alt="Class logo" width="96" height="96" decoding="async" />
     </div>
   </header>
   <main id="app" aria-label="Class resources">
@@ -40,6 +39,7 @@
       Designed and maintained by Achyuth Jayadevan
     </p>
   </footer>
+  <noscript>JavaScript is required to browse the class resources.</noscript>
   <script type="module" src="/src/main.js"></script>
 </body>
 
