--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </main>
   <footer id="site-footer">
     <p id="footer-text">
-      Designed and maintained by Achyuth Jayadevan
+      Designed and maintained by <a href="https://www.linkedin.com/in/achyuthjayadevan/" target="_blank" rel="noopener noreferrer" id="footer-link">Achyuth Jayadevan</a>
     </p>
   </footer>
   <noscript>JavaScript is required to browse the class resources.</noscript>
