--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <img id="site-logo" alt="Class logo" width="96" height="96" decoding="async" />
     </div>
   </header>
+  <div id="modal-container" hidden></div>
+  <section id="admin-panel" hidden></section>
   <main id="app" aria-label="Class resources">
     <section id="content-panel">
       <h1 id="content-title">Contents</h1>
